Fixed line spacing in pre tags for code blocks in blogs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,11 @@ nav {
   padding-bottom: 15px;
 }
 
+pre {
+  line-height: 12px;
+  margin-bottom: 0;
+}
+
 p {
   margin-bottom: 0;
 }
